Fix bug #81227: PDO::inTransaction reports false when in transaction